Fix: padding/gap styles between images and icons to match Figma doc

--- a/component-library/components/simple/card/card.scss
+++ b/component-library/components/simple/card/card.scss
@@ -1,16 +1,22 @@
 .c-card {
     display: flex;
-    flex-direction: column;
-    gap: 1rem;
+    flex-direction: column;    
+    color:var(--brand-grey-000);    
+    gap:1.5rem;
 
-    &__content, &__header, &__button, &--icon &__imagery {
-        padding: 0 1.5rem;
+    &--icon{
+      gap:1rem;
     }
-    &--icon {
-        padding: 1.5rem 0;
+
+    &--icon &__imagery{
+      padding:1.5rem 1.5rem 0;
     }
-    &--image {
-        padding: 0 0 1.5rem 0;
+
+    &__content-wrapper{
+      display: flex;
+      flex-direction: column;  
+      gap: 1rem;
+      padding:0 1.5rem 1.5rem;
     }
 
     &__content {
